Temp fix of too high div in assign, needs more work

--- a/app/assets/stylesheets/controller/clients.css.scss
+++ b/app/assets/stylesheets/controller/clients.css.scss
@@ -107,6 +107,11 @@ font-size: 1.2em;
   margin-top: -5.3em;
 }
 
+.clients .studentInfo {
+  margin-top: 10em !important;
+}
+
+
 .clinets .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
 cursor: pointer;
 }
